Fix: Make dropdown menu fully visible

--- a/src/flat/elements/_input.scss
+++ b/src/flat/elements/_input.scss
@@ -13,7 +13,9 @@
     background: var(--background-color-hover);
     color: var(--on-background-color-hover);
   }
+}
 
+#{utils.$prefix}text-input, #{utils.$prefix}number-input::part(input) {
   overflow: hidden;
 }
 
